--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.1.1",
+    "clsx": "^1.2.1",
+    "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.56.2",
+    "sharp": "^0.31.3",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
+    "@types/node": "18.11.15",
     "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
+    "@types/react-dom": "18.0.9",
+    "eslint": "8.29.0",
+    "eslint-config-next": "13.0.6",
     "typescript": "4.9.4"
   }
 }
