--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.1.1",
     "clsx": "^1.2.1",
     "next": "13.0.6",
     "react": "18.2.0",
